--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.51",
-    "butter-toast": "^2.1.2",
+    "@babel/runtime": "^7.3.1",
+    "butter-toast": "^2.1.5",
+    "history": "^4.7.2",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.22.2",
-    "react": "^16.4.2",
-    "react-date-picker": "^6.11.3",
-    "react-dom": "^16.4.2",
+    "react": "^16.7.0",
+    "react-date-picker": "^6.13.0",
+    "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-spinners": "^0.3.3"
   },
